log
Fri 10 Mar 2023 12:19:00 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6a86112
Fri 17 Mar 2023 05:52:19 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|5
total_score: 20/70
a3b2c2b
Fri 17 Mar 2023 05:54:06 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
ce1aa40
Fri 17 Mar 2023 06:01:27 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:58:14: error: redefinition of ‘p’
   58 |    Persona * p = (Persona *) malloc(sizeof(Persona));
      |              ^
exercises.c:57:13: note: previous definition of ‘p’ with type ‘Persona *’
   57 |   Persona * p = NULL;
      |             ^
Compilation failed
ab4f67a
